Added boxshadow and clip-paths

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <thead>
             <tr>
                 <th></th>
-                <th>
+                <th class="red">
                     <h1>BASIC</h1>
                     <p>LOREM IPSUM DOLORM SIT</p>
                 </th>
-                <th>
+                <th class="green">
                     <h1>BUSINESS</h1>
                     <p>LOREM IPSUM DOLORM SIT</p>
                 </th>
-                <th>
+                <th class="blue">
                     <h1>PREMIUM</h1>
                     <p>LOREM IPSUM DOLORM SIT</p>
                 </th>
